--- a/document/app.json
+++ b/document/app.json
@@ -11,8 +11,8 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarBackgroundColor": "#fba414",
+    "navigationBarTitleText": "用了都说妙Mall",
     "navigationBarTextStyle": "black"
   },
   "style": "v2",
